# python_pyttsx3

./: .replit  README.md  friend.py  pyproject.toml
