[tool.poetry]
name = "pythonpyttsx3"
version = "0.1.0"
description = ""
authors = ["Swapnil <shafiahmedswapnil6494@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pyttsx3 = "^2.87"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
